Spelling and grammar corrections for the identity chapter

--- a/sections/character_creation/identity.tex
+++ b/sections/character_creation/identity.tex
@@ -1,38 +1,39 @@
-Tabletop roleplaying begins for the players with Character creation. Here you must think of a character you wish to play. This could be an alternate version of yourself or someone completely different. The possibilities are endless and you’ll always be able to find a character you want to play.
+Tabletop roleplaying begins for the players with character creation. Here you must think of a character you wish to play as. This could be an alternate version of yourself or someone completely different. The possibilities are endless, and you'll always be able to find a character you want to play.
 
-A real and well-rounded character can’t just be summarized into a morality archetype. A real person generally does both good things and bad things, motivated by core characteristics. This doesn’t mean that your character can’t be wholly good or wholly evil, just that a character’s actions shouldn’t be structured by the player character or Narrator around a pre-set archetype, as this will most likely produce a boring character. A wholly good character is still capable of bad things if they have a powerful enough reason or motivation to do so.
+A realistic and well-rounded character can't just be summarized into a morality archetype. A real person generally does both good things and bad things, motivated by core characteristics. This doesn't mean that your character can't be wholly good or wholly evil, just that a character's actions shouldn't be structured by the player character or Narrator around a pre-set archetype, as this will most likely produce a boring character. A wholly good character is still capable of bad things if they have a powerful enough reason or motivation to do so.
 
-The key is being consistent with who your character is and you determine who they are at the very beginning.
+The key is being consistent with who your character is, this means you need to determine who they are at the very beginning.
 
-Remember that in settings with action, swords, magic, guns or lasers, Characters die. Cogent Roleplay is a game with rules – rules that are there to provide an appropriate level of challenge. Sometimes failure will simply lead to your character’s death. This can (believe it or not) be fun. Your character may even opt to go out in a blaze of glory. Of course, sometimes it’s not particularly fun, but if the dice decide it’s your character's time to die then there’s not much that can be done about it! We suggest you always have a second character concept ready to make a new character in case your current character dies.
+Remember that in settings with action (i.e. swords, magic, guns or lasers), characters can die. Cogent Roleplay is a game with rules - rules that are there to provide an appropriate level of challenge. Sometimes failure will simply lead to your character's death. This can (believe it or not) be fun. Your character may even opt to go out in a blaze of glory. Of course, sometimes it's not particularly fun, but if the dice decide it's your character's time to die then there's not much that can be done about it! We suggest you always have a second character concept ready to make a new character in case your current character dies.
 
 \begin{displayquote}
 \textbf{A Few Words on Playing as a Group}
 
-Something that's quite important to keep in mind before you dive into making your character is the "party", the other characters your fellow players will be controlling. The Party needs to have a reason to at least stick together. They don't necessarily have to get along; though it helps the party achieve their goals, getting along in-game isn't necessarily more or less fun. A character 
-that doesn't mesh well with the other characters can actually add a lot of fun and realism in role-play, though it needs to be handled with maturity so players don't take offence to things the character does in game when the player is simply being true to their character. It's only difficult to play a character that doesn't get along with other characters when they don't get along so much that it's unrealistic for the characters to stay together. As mentioned before the party needs at least a reason to stay together otherwise it defeats the purpose of the game. You can't play as a group if one of the characters leaves the party for in-game reasons. Still if a player does this out of being true to their character, there is nothing stopping them from making a new character that can join the party soon after.
+Something that's quite important to keep in mind before you dive into making your character is the "party", the other characters your fellow players will be controlling. The party needs to have a reason to at least stick together. They don't necessarily have to get along; though it helps the party achieve their goals, getting along in-game isn't necessarily more or less fun. 
+A character that doesn't mesh well with the other characters can actually add a lot of fun and realism in roleplay, though it needs to be handled with maturity so that players don't take offence to things the character does in game when the player is simply being true to their character. It's only difficult to play a character that doesn't get along with other characters when they don't get along so much that it's unrealistic for the characters to stay together. As mentioned before the party needs at least a reason to stay together otherwise it defeats the purpose of the game. You can't play as a group if one of the characters leaves the party for in-game reasons. Still, if a player does this out of being true to their character, there is nothing stopping them from making a new character that can join the party soon after.
 \end{displayquote}
 
 \section{Creating a Character} \label{sec:creating_a_character}
 
-When making a character, try to match the seriousness and realism of them to the setting and genre you’re playing in. Make them real, give them goals and history. %[This does not exist on the v1.0.0 character sheet. Is there a new character sheet?] Indeed on the Cogent Roleplay Character Sheet, there are several Core Characteristic requirements to be filled out:
+When making a character, try to match the seriousness and realism of them to the setting and genre you're playing in. Make them real, give them goals and history. %[This does not exist on the v1.0.0 character sheet. Is there a new character sheet?] Indeed on the Cogent Roleplay Character Sheet, there are several Core Characteristic requirements to be filled out:
 
 %image
 
 \subsection{Character Disposition} \label{subsec:character_disposition}
 
-Are they happy, sad, moody, funny, cautious, untrusting, stupid, smart, tactical, shy, or boisterous? The list can go on and on. This doesn’t mean that they can’t be in any other mood, just that generally a person’s standard disposition is quite consistent throughout their lives. It is often wise to base these dispositions on a character’s history and beliefs/morality, to build a character with depth and motive.
+Are they happy, sad, moody, funny, cautious, untrusting, stupid, smart, tactical, shy, or boisterous? The list can go on and on. This doesn't mean that they can't be in any other mood, just that generally a person's standard disposition is quite consistent throughout their lives. It is often wise to base these dispositions on a character's history and beliefs/morality, to build a character with depth and motive.
 
 \subsection{Character History} \label{subsec:character_history}
 
-A good history can help shape who your character is in great ways. You don’t have to write a novel but generally the more detailed the better – of course, there isn’t a lot of room on the character sheet for detailed character history, but you may choose to write one elsewhere. A good history can make your character feel much more real which will then, in turn, help your role-play be more convincing, rewarding and fun.
+A good history can help shape who your character is in great ways. You don't have to write a novel but generally the more detailed the better - of course, there isn't a lot of room on the character sheet for detailed character history, but you may choose to write one elsewhere. A good history can make your character feel much more real, which will then, in turn, help your roleplay be more convincing, rewarding and fun.
 
 \subsection{Beliefs / Morality} \label{subsec:beliefs_morality}
 
-It’s hard to find a person without a specific worldview, with defined things that they see as good or evil. So a realistic character should also have these things. Even having no morals or beliefs is a morality and a belief. No matter what you chose for your character you should always answer why your characters believe the things they do and \textbf{why} they see things as evil and things as good. This will define your character, even more.
+It's hard to find a person without a specific worldview, with defined things that they see as good or evil. So a realistic character should also have these things. Even having no morals or beliefs is a morality and a belief. No matter what you chose for your character you should always answer why your characters believe the things they do and why they see things as evil and things as good. This will define your character even more.
 
 \subsection{Goals / Aspirations} \label{subsec:goals_aspirations}
 
-Everybody has goals or aspirations. They’re one-way people give purpose to their lives, so what purpose does your character see for themselves? This specific characteristic will very much guide what your character will do in-game. It’s recommended that you choose several long-term and short-term goals and aspirations.
+Everybody has goals or aspirations. They're one way people give purpose to their lives. What purpose does your character see for themselves? This specific characteristic will very much guide what your character will do in-game. It's recommended that you choose several long-term and short-term goals and aspirations.
 
-Following these suggestions will guide you to make a very well-defined character. The next step is to define them through their statistics.
+
+\textbf{Following these suggestions will guide you to make a very well-defined character. The next step is to define them through their statistics.}
