Rename dictionary and minor fixes to style

--- a/sections/character_creation/identity.tex
+++ b/sections/character_creation/identity.tex
@@ -1,6 +1,6 @@
 Tabletop roleplaying begins for the players with character creation. Here you must think of a character you wish to play as. This could be an alternate version of yourself or someone completely different. The possibilities are endless, and you'll always be able to find a character you want to play.
 
-A realistic and well-rounded character can't just be summarized into a morality archetype. A real person generally does both good things and bad things, motivated by core characteristics. This doesn't mean that your character can't be wholly good or wholly evil, just that a character's actions shouldn't be structured by the player character or Narrator around a pre-set archetype, as this will most likely produce a boring character. A wholly good character is still capable of bad things if they have a powerful enough reason or motivation to do so.
+A realistic and well-rounded character can't just be summarised into a morality archetype. A real person generally does both good things and bad things, motivated by core characteristics. This doesn't mean that your character can't be wholly good or wholly evil, just that a character's actions shouldn't be structured by the player character or Narrator around a pre-set archetype, as this will most likely produce a boring character. A wholly good character is still capable of bad things if they have a powerful enough reason or motivation to do so.
 
 The key is being consistent with who your character is, this means you need to determine who they are at the very beginning.
 
@@ -9,7 +9,7 @@ Remember that in settings with action (i.e. swords, magic, guns or lasers), char
 \begin{displayquote}
 \textbf{A Few Words on Playing as a Group}
 
-Something that's quite important to keep in mind before you dive into making your character is the "party", the other characters your fellow players will be controlling. The party needs to have a reason to at least stick together. They don't necessarily have to get along; though it helps the party achieve their goals, getting along in-game isn't necessarily more or less fun. 
+Something that's quite important to keep in mind before you dive into making your character is the \enquote{party}, the other characters your fellow players will be controlling. The party needs to have a reason to at least stick together. They don't necessarily have to get along; though it helps the party achieve their goals, getting along in-game isn't necessarily more or less fun. 
 A character that doesn't mesh well with the other characters can actually add a lot of fun and realism in roleplay, though it needs to be handled with maturity so that players don't take offence to things the character does in game when the player is simply being true to their character. It's only difficult to play a character that doesn't get along with other characters when they don't get along so much that it's unrealistic for the characters to stay together. As mentioned before the party needs at least a reason to stay together otherwise it defeats the purpose of the game. You can't play as a group if one of the characters leaves the party for in-game reasons. Still, if a player does this out of being true to their character, there is nothing stopping them from making a new character that can join the party soon after.
 \end{displayquote}
 
