--- a/sections/introduction/roleplay.tex
+++ b/sections/introduction/roleplay.tex
@@ -23,7 +23,7 @@ Example of non-immersive roleplaying:
 \begin{displayquote}
 \textit{\textbf{Marcus} (played by John)}
 
-"My character says to Tim's character that we should be careful of an ambush."
+\enquote{My character says to Tim's character that we should be careful of an ambush.}
 \end{displayquote}
 
 
@@ -32,7 +32,7 @@ The problem with interactions like this is that it's impersonal. The players sho
 \begin{displayquote}
     \textit{\textbf{Marcus} (played by John)}
     
-    I say to Garath, "Hey meatbag, tread carefully! Bandits roam these parts and I wouldn't be surprised if some may be lying in wait to ambush us…"
+    I say to Garath, \enquote{Hey meatbag, tread carefully! Bandits roam these parts and I wouldn't be surprised if some may be lying in wait to ambush us…}
 \end{displayquote}
 
 John would then wait for Tim to respond in character. For example, if Tim's character is a hot-tempered thick-headed warrior named Gareth, the roleplay might proceed something like this:
@@ -40,12 +40,12 @@ John would then wait for Tim to respond in character. For example, if Tim's char
 \begin{displayquote}
     \textit{\textbf{Gareth} (played by Tim)}
     
-    "Foolish bandits, why would they be lying in wait if their intent is to ambush travelers? Surely it would take too much time to stand up!"
+    \enquote{Foolish bandits, why would they be lying in wait if their intent is to ambush travelers? Surely it would take too much time to stand up!}
 \end{displayquote}
 
 Speaking freely as your character (warts and all) will enhance the immersion of the game and make it a lot more fun. Not only should the player try to speak as their character, but they should speak the same way their character would speak. You can even speak in an accent if you want!
 
-The player characters will come across many other characters controlled by the Narrator. These are called \textbf{non-player characters} and are often referred to as "NPCs."
+The player characters will come across many other characters controlled by the Narrator. These are called \textbf{non-player characters} and are often referred to as \enquote{NPCs}.
 
 The Narrator is the most important person in any tabletop roleplaying game as you can't play without one. They describe everything in the game's world and setting to aid the players in visualizing the adventures. They run the game through the rules of the system, informing the players when they are required to make dice rolls, which will then determine the success or failure of their actions.
 
