--- a/sections/introduction/welcome.tex
+++ b/sections/introduction/welcome.tex
@@ -19,7 +19,7 @@ Cogent Roleplay is currently in its late Alpha phase, Beta soon, where the rules
 
 \begin{itemize}
     \item Cogent Roleplay is simple for beginners and easy to learn, but has a depth that can be mastered and explored by experienced players.
-    \item In the new age of content, where video content, audiobooks and podcasts reign supreme, Cogent is uniquely structured to enable the best storytellers to tell interesting and diverse stories, naturally suited to every setting, genre and play style, and share them with the world.
+    \item In the new age of content - where video content, audiobooks and podcasts reign supreme - Cogent is uniquely structured to enable the best storytellers to tell interesting and diverse stories, naturally suited to every setting, genre and play style, and share them with the world.
     \item We understand that to build an RPG system that will cater to the widest range of stories and personalities, we need to be extremely community-oriented as we develop the rules and tools for Cogent. We will build Cogent from the ground up to serve the community that builds and contributes to it.
 \end{itemize}
 
