Spelling and grammar corrections for attributes

--- a/sections/character_creation/attributes.tex
+++ b/sections/character_creation/attributes.tex
@@ -1,16 +1,16 @@
-Characters statistics in Cogent Roleplay can be broken down into two categories which determine the bonuses (or penalties) you receive when rolling against Challenge Levels (\textbf{CL}) encountered in the game, whether \textbf{Actions} and \textbf{Conflicts}. These two categories are \textbf{attributes} and \textbf{skills}.
+Characters statistics in Cogent Roleplay can be broken down into two categories, which determine the bonuses (or penalties) you receive when rolling against Challenge Levels (\textbf{CL}) encountered in the game, whether \textbf{Actions} or \textbf{Conflicts}. These two categories are \textbf{attributes} and \textbf{skills}.
 
-By default, in \textbf{Fast Play} games (see \textbf{How to Play}) player characters will be given \textbf{2 Attributes Points} and \textbf{12 Skill Points} they may assign to their character during character creation.
+By default, in \textbf{Fast Play} games (see \textbf{How to Play} - \autoref{part:how_to_play}) player characters will be given \textbf{2 Attributes Points} and \textbf{12 Skill Points} that they may assign to their character during character creation.
 
 \section{Attributes} \label{sec:attributes}
 
-By default, in \textbf{Fast Play }games, player characters will be given \textbf{2 Attribute Points} they may assign to their character during character creation.  Generally, in \textbf{Campaign Play} (see \textbf{How to Play}) players will start with fewer points and gain more during the course of their adventure.
+By default, in \textbf{Fast Play} games, player characters will be given \textbf{2 Attribute Points} they may assign to their character during character creation.  Generally, in \textbf{Campaign Play} (see \textbf{How to Play} - \autoref{part:how_to_play}) players will start with fewer points and gain more during the course of their adventure.
 
 Attributes represent the physical abilities of your character.  There are three:
 
 \begin{itemize}
     \item \textbf{Strength (STR)}
-    \item \textbf{Reflex (RFL)}
+    \item \textbf{Reflex (REF)}
     \item \textbf{Intelligence (INT)}
 \end{itemize}
 
@@ -26,19 +26,19 @@ When assigning a point to an attribute or skill, simply mark a box with your pen
 
 The tapered “negative” box present represents the capacity for a character to have negatives in attributes. Players may not choose to have a negative in an attribute – it is only there in case a disabling characteristic or injury demands a negative be applied to an attribute.
 
-These three attributes cover all the actions your player might attempt. Upon first glance it can seem like many physical abilities or qualities a person can possess are missed (most other roleplay systems have a lot more), such as stamina, constitution, speed, knowledge, charisma etc. but in Cogent, these things are incorporated into the three Attributes above. Things like constitution and stamina are covered in strength, speed in reflex, and knowledge and charisma in intelligence. There’s no need to over-complicate it!
+These three attributes cover all the actions your player might attempt. Upon first glance it can seem like many physical abilities or qualities a person can possess are missed (most other roleplay systems have a lot more), such as stamina, constitution, speed, knowledge, charisma etc. but in Cogent, these things are incorporated into the three Attributes above. Things like constitution and stamina are covered in strength, speed in reflex, and knowledge and charisma in intelligence. There's no need to over-complicate it!
 
-Each of these attributes applies to certain skill checks and to all combat rolls. From a combat perspective, one point in Intelligence and one point in Reflex have the same dice bonus as two points in strength. This is because a fast or clever opponent may very well be just as challenging as a strong one.
+Each of these attributes applies to certain skill checks and to all combat rolls. From a combat perspective, one point in \textbf{Intelligence} and one point in \textbf{Reflex} have the same dice bonus as two points in \textbf{Strength}. This is because a fast or clever opponent may very well be just as challenging as a strong one.
 
 In addition to granting bonus dice to appropriate rolls, each attribute also gives a specific advantage unrelated to dice checks. These are:
 
 \begin{itemize}
-    \item \textbf{Strength}: For each point in \textbf{STR}, you may reduce an \textbf{Injury Level} by -1 once per Combat Encounter.
-    \item \textbf{Reflex}: Your \textbf{Initiative }is equal to the number of points in \textbf{RFL}.
+    \item \textbf{Strength}: For each point in \textbf{STR}, you may reduce an \textbf{Injury Level} by -1 once per \textbf{Combat Encounter}.
+    \item \textbf{Reflex}: For each point in \textbf{REF}, you receive a higher turn priority. This is analogous to initiative in other systems.
     \item \textbf{Intelligence}: For each point in \textbf{INT}, you receive \textbf{+3 Skill Points} during character creation
 \end{itemize}
 
-An average person in any setting will have the equivalent of \textbf{0 points} in each. \textbf{1 point} in any of these attributes equates to the character being professional or naturally gifted in that area. \textbf{2 points} in any one attribute would equate to being elite or ‘world-class’ in that aspect.
+An average person in any setting will have the equivalent of \textbf{0 points} in each. \textbf{1 point} in any of these attributes equates to the character being professional or naturally gifted in that area. \textbf{2 points} in any one attribute would equate to being elite or `world-class' in that aspect.
 
 Example:
 
@@ -49,9 +49,9 @@ Example:
      \hline
      \textbf{Strength} & Average & Soldier, Athlete & Olympic Athlete \\ 
      \textbf{Reflex} & Average & Acrobat, Thief & Bruce Lee \\
-     \textbf{Intelligence} & Average & Professor, Politician & Sherlock Holmes \\
+     \textbf{Intelligence} & Average & Professor, skilled con artist & Sherlock Holmes \\
      \hline
     \end{tabular}
 \end{center}
 
-Some settings (depending on the narrator) may allow for over 2 points in one attribute. These are mostly justifiable through means of superhuman powers, genetic anomaly, magical enchantment or advanced technology.
+Some settings (depending on the \textbf{Narrator}) may allow for over 2 points in one attribute. These are mostly justifiable through means of superhuman powers, genetic anomaly, magical enchantment or advanced technology.
