Changed some refs to autorefs and added hyperref, and, corrected missing full stop in how-to.

--- a/main.tex
+++ b/main.tex
@@ -4,8 +4,10 @@
 \usepackage{tabularx}
 \usepackage{xltabular}
 \usepackage{csquotes}
+\usepackage{hyperref}
 
 \begin{document}
+\renewcommand{\chapterautorefname}{Ch.}
 
 \coverpage{\TITLE}{\SUBTITLE}{\AUTHOR}{\DATE}{\SUBJECT}
 
